# MLOps-project-airflow

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dags/: train_model.py
dags/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
dags/catboost_info/learn/: events.out.tfevents
dags/data/: preprocessing.py
dags/features/: feature_engineering.py
dags/mlruns/0/: meta.yaml
dags/mlruns/750137550883901234/: meta.yaml
dags/mlruns/750137550883901234/4a8211dfe8dd4bd49e3f20b40dfd8801/: meta.yaml
dags/mlruns/750137550883901234/4a8211dfe8dd4bd49e3f20b40dfd8801/tags/: mlflow.runName
dags/mlruns/750137550883901234/4e5bb63ea8f242a3a6287a0a10f23e48/: meta.yaml
dags/mlruns/750137550883901234/4e5bb63ea8f242a3a6287a0a10f23e48/metrics/: accuracy_score  best_score
dags/mlruns/750137550883901234/4e5bb63ea8f242a3a6287a0a10f23e48/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
dags/mlruns/750137550883901234/b1d20e98056843fcb12e622a86750c88/: meta.yaml
dags/mlruns/750137550883901234/b1d20e98056843fcb12e622a86750c88/metrics/: accuracy_score  best_score
dags/mlruns/750137550883901234/b1d20e98056843fcb12e622a86750c88/tags/: mlflow.log-model.history  mlflow.runName
dags/mlruns/750137550883901234/bd742256a45f4f9e8a3fc2198e16c8e8/: meta.yaml
dags/mlruns/750137550883901234/c273fc8866c94ccf8cafeeb670e01648/: meta.yaml
dags/models/: train_catboost.py
dags/utils/: train_model.py
mlruns/0/: meta.yaml
mlruns/857216939858270621/: meta.yaml
scripts/: airflow-entrypoint.sh
(+18 files in other folders)
