[tool.poetry]
name = "project"
version = "0.1.0"
description = "MLOps course project with the combination of MLflow and Airflow"
authors = ["khushbakhtx <khushbakht.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.6"
fire = "^0.7.0"
ipykernel = "^6.29.5"
kaleido = "0.2.1"
mlflow = "^2.19.0"
optuna = "^4.1.0"
pip = "^24.2"
uvicorn = "^0.34.0"
apache-airflow = "^2.10.4"
apache-airflow-providers-common-compat = "^1.3.0"
apache-airflow-providers-common-io = "^1.5.0"
apache-airflow-providers-common-sql = "^1.21.0"
apache-airflow-providers-fab = "^1.5.2"
apache-airflow-providers-ftp = "^3.12.0"
apache-airflow-providers-http = "^5.0.0"
apache-airflow-providers-imap = "^3.8.0"
apache-airflow-providers-smtp = "^1.9.0"
apache-airflow-providers-sqlite = "^4.0.0"
requests = "^2.32.3"
catboost = "^1.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
